[package]
name = "agp"
version = "0.2.0"
edition = "2024"
description = "when {:?} fails you, use AGP"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["hashmap", "print", "debug", "utility", "agp"]
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/agp/latest/agp/"

[dependencies]
