[package]
name = "formatzilla"
version = "0.4.0"
edition = "2024"
description = "the killer of formatting"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["hashmap", "print", "debug", "utility", "agp"]
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/formatzilla/latest/formatzilla/"
repository = "https://github.com/IdkWhatAmIDoin/formatzilla"

[dependencies]
